fixed weird gaps
- got bars to reflect popularity
- got rid of the weird gaps between the bars
- yet to work out how to show the different info for each hover

--- a/static/screen.css
+++ b/static/screen.css
@@ -53,6 +53,7 @@ ul {
   padding: 1em;
   float: left;
   margin: 10px;
+  position: absolute;
 }
 
 p {
